# anki-connect-server

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TODO  anki_wrapper.py  config.py  mcp_server.py  pyproject.toml
.github/workflows/: docker-build.yml  uv-publish.yml
api/: handlers.py
src/anki_connect_server/: __init__.py  anki_wrapper.py  api.py  cli.py  config.py  handlers.py  mcp_server.py
tests/: conftest.py  test_api.py  test_config.py  test_handlers.py  test_integration.py  test_mcp.py  test_mcp_server.py  test_sync_server.py
