[project]
name = "anki-connect-server"
version = "0.1.0"
description = "Headless AnkiConnect-compatible REST API server with AnkiWeb sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "anki>=24.6",
    "python-multipart>=0.0.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastmcp>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
server = "anki_connect_server.api:run_server"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=. --cov-report=xml --cov-report=term-missing"
